Fix previous questions with including/not including ^DJA in problem.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,45 +547,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0               ^DJI    AAPL    AXP      BA    CAT   CSCO     CVX     DD   \n",
-      "Date                                                                       \n",
-      "2014-10-29  16974.31  105.54  87.13  120.07  96.58  23.38  112.38  61.77  \\\n",
-      "2014-10-30  17195.42  105.18  87.52  120.80  96.55  23.36  112.44  62.57   \n",
-      "2014-10-31  17390.52  106.18  88.72  121.86  97.75  23.74  115.08  63.95   \n",
-      "2014-11-03  17366.24  107.56  89.61  122.95  96.61  23.85  112.04  63.70   \n",
-      "2014-11-04  17383.84  106.77  90.13  122.77  95.05  24.14  110.69  63.36   \n",
-      "\n",
-      "0             DIS     GE  ...    NKE    PFE     PG    TRV    UNH     UTX   \n",
-      "Date                      ...                                              \n",
-      "2014-10-29  87.90  24.76  ...  90.94  28.52  83.80  97.18  91.52  103.46  \\\n",
-      "2014-10-30  88.57  24.76  ...  91.98  28.86  84.19  97.75  92.42  103.94   \n",
-      "2014-10-31  89.71  24.90  ...  91.95  28.97  84.50  98.53  93.54  104.59   \n",
-      "2014-11-03  90.04  24.79  ...  92.43  29.20  84.61  97.70  93.39  103.90   \n",
-      "2014-11-04  88.70  24.79  ...  92.92  29.28  85.83  98.85  93.51  104.47   \n",
-      "\n",
-      "0               V     VZ    WMT    XOM  \n",
-      "Date                                    \n",
-      "2014-10-29  53.28  47.51  74.53  91.59  \n",
-      "2014-10-30  58.74  47.58  74.59  91.45  \n",
-      "2014-10-31  59.93  47.91  74.41  93.64  \n",
-      "2014-11-03  59.96  48.05  74.42  92.24  \n",
-      "2014-11-04  60.31  47.99  75.38  91.52  \n",
-      "\n",
-      "[5 rows x 31 columns]\n",
-      "0         ^DJI       AAPL        AXP         BA        CAT\n",
-      "0                                                         \n",
-      "^DJI  5.634794   6.416804   4.809443   5.745769   5.992771\n",
-      "AAPL  6.416804  17.189758   5.163950   8.117157   7.504042\n",
-      "AXP   4.809443   5.163950  11.801005   3.709621   5.023068\n",
-      "BA    5.745769   8.117157   3.709621  11.578327   5.912234\n",
-      "CAT   5.992771   7.504042   5.023068   5.912234  15.586600\n"
+      "0          AAPL        AXP         BA        CAT       CSCO\n",
+      "0                                                          \n",
+      "AAPL  17.255424   5.189919   8.155240   7.535200   7.789729\n",
+      "AXP    5.189919  11.842255   3.717910   5.042402   3.480634\n",
+      "BA     8.155240   3.717910  11.618264   5.935137   6.465403\n",
+      "CAT    7.535200   5.042402   5.935137  15.649550   6.247492\n",
+      "CSCO   7.789729   3.480634   6.465403   6.247492  12.651489\n"
      ]
     }
    ],
@@ -596,7 +571,7 @@
     "# Step 1: Read in the data.\n",
     "data = read_data(file_path)\n",
     "\n",
-    "print(data.head())\n",
+    "# print(data.head())\n",
     "\n",
     "# Step 2 and 3: Convert to simple returns and annualize.\n",
     "daily_returns = calculate_simple_returns(data)\n",
@@ -605,10 +580,10 @@
     "# print(annual_returns)\n",
     "\n",
     "# Step 4: Move the index column out of the matrix.\n",
-    "## Already done in read_csv().\n",
+    "annual_returns_modified = annual_returns.iloc[1:, 1:]\n",
     "\n",
     "# Step 5: Compute the covariance matrix.\n",
-    "Qts = compute_covariance_matrix(annual_returns)\n",
+    "Qts = compute_covariance_matrix(annual_returns_modified)\n",
     "\n",
     "# Step 6: Print the first five rows and columns of the covariance matrix.\n",
     "print(Qts.iloc[:5, :5])"
@@ -774,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +838,7 @@
     "    results = pd.DataFrame(columns=['Intercept', 'Beta', 'Sigma_R'])\n",
     "\n",
     "    # Loop through securities and regress each against the index\n",
-    "    for column in daily_returns.columns[1:]:  # Skip index column\n",
+    "    for column in daily_returns.columns[1:]:  # Skip Dow Jones column\n",
     "        alpha, beta, sigma_r = perform_regression(index_returns, daily_returns[column])\n",
     "        results.loc[column] = [alpha, beta, sigma_r]\n",
     "\n",
@@ -974,69 +949,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def port(mu: np.ndarray, Q: np.ndarray, tau: float) -> (np.ndarray, float):\n",
-    "    \"\"\"\n",
-    "    Adjusted to also return the utility (expected return) of the optimized portfolio.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    - mu (np.ndarray): The mean return vector for the securities.\n",
-    "    - Q (np.ndarray): The covariance matrix of the securities' returns.\n",
-    "    - tau (float): The risk tolerance parameter.\n",
-    "    \n",
-    "    Returns:\n",
-    "    - h (np.ndarray): The optimized portfolio weights vector.\n",
-    "    - utility_value (float): The utility (expected return) of the optimized portfolio.\n",
-    "    \"\"\"\n",
-    "    n = mu.shape[0]  # Number of securities\n",
-    "    h = cp.Variable(n)\n",
-    "    utility = cp.quad_form(h, Q) * -0.5 + tau * cp.matmul(mu.T, h)  # Maximizing the utility function\n",
-    "    constraints = [cp.sum(h) == 1, h >= 0, h <= 0.1]  # Portfolio constraints\n",
-    "    problem = cp.Problem(cp.Maximize(utility), constraints)\n",
-    "    problem.solve()\n",
-    "\n",
-    "    utility_value = mu.T @ h.value  # Expected return for the optimized portfolio\n",
-    "    return h.value, utility_value\n",
-    "\n",
-    "def plot_efficient_frontiers(mu, Qts, Qsi, tau_range):\n",
-    "    \"\"\"\n",
-    "    Plots efficient frontiers for both time-series and single-index models.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - mu (np.ndarray): Mean returns vector.\n",
-    "    - Qts (np.ndarray): Covariance matrix from time-series model.\n",
-    "    - Qsi (np.ndarray): Covariance matrix from single-index model.\n",
-    "    - tau_range (np.ndarray): Range of risk tolerance values.\n",
-    "    \"\"\"\n",
-    "    returns_ts, risks_ts = [], []\n",
-    "    returns_si, risks_si = [], []\n",
-    "\n",
-    "    for tau in tau_range:\n",
-    "        # Time-series model\n",
-    "        weights_ts, utility_ts = port(mu, Qts, tau)\n",
-    "        risk_ts = np.sqrt(weights_ts.T @ Qts @ weights_ts)\n",
-    "        returns_ts.append(utility_ts)\n",
-    "        risks_ts.append(risk_ts)\n",
-    "\n",
-    "        # Single-index model\n",
-    "        weights_si, utility_si = port(mu, Qsi, tau)\n",
-    "        risk_si = np.sqrt(weights_si.T @ Qsi @ weights_si)\n",
-    "        returns_si.append(utility_si)\n",
-    "        risks_si.append(risk_si)\n",
-    "\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.plot(risks_ts, returns_ts, 'b-', label='Time-Series Model')\n",
-    "    plt.plot(risks_si, returns_si, 'r-', label='Single-Index Model')\n",
-    "    plt.xlabel('Risk (Standard Deviation)')\n",
-    "    plt.ylabel('Expected Return')\n",
-    "    plt.title('Efficient Frontier Comparison')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
-    "    plt.show()"
-   ]
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Invalid dimensions for arguments.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[185], line 66\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;66;03m# Drop the first column (^DJI).\u001b[39;00m\n\u001b[0;32m     64\u001b[0m Qts_modified \u001b[38;5;241m=\u001b[39m Qts\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m1\u001b[39m:, \u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m---> 66\u001b[0m \u001b[43mplot_efficient_frontiers\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQts_modified\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQsi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTAU\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[185], line 39\u001b[0m, in \u001b[0;36mplot_efficient_frontiers\u001b[1;34m(mu, Qts, Qsi, tau_range)\u001b[0m\n\u001b[0;32m     35\u001b[0m returns_si, risks_si \u001b[38;5;241m=\u001b[39m [], []\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m tau \u001b[38;5;129;01min\u001b[39;00m tau_range:\n\u001b[0;32m     38\u001b[0m     \u001b[38;5;66;03m# Time-series model\u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m     weights_ts, utility_ts \u001b[38;5;241m=\u001b[39m \u001b[43mport\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtau\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     40\u001b[0m     risk_ts \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(weights_ts\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m@\u001b[39m Qts \u001b[38;5;241m@\u001b[39m weights_ts)\n\u001b[0;32m     41\u001b[0m     returns_ts\u001b[38;5;241m.\u001b[39mappend(utility_ts)\n",
+      "Cell \u001b[1;32mIn[185], line 16\u001b[0m, in \u001b[0;36mport\u001b[1;34m(mu, Q, tau)\u001b[0m\n\u001b[0;32m     14\u001b[0m n \u001b[38;5;241m=\u001b[39m mu\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]  \u001b[38;5;66;03m# Number of securities\u001b[39;00m\n\u001b[0;32m     15\u001b[0m h \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39mVariable(n)\n\u001b[1;32m---> 16\u001b[0m utility \u001b[38;5;241m=\u001b[39m \u001b[43mcp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquad_form\u001b[49m\u001b[43m(\u001b[49m\u001b[43mh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.5\u001b[39m \u001b[38;5;241m+\u001b[39m tau \u001b[38;5;241m*\u001b[39m cp\u001b[38;5;241m.\u001b[39mmatmul(mu\u001b[38;5;241m.\u001b[39mT, h)  \u001b[38;5;66;03m# Maximizing the utility function\u001b[39;00m\n\u001b[0;32m     17\u001b[0m constraints \u001b[38;5;241m=\u001b[39m [cp\u001b[38;5;241m.\u001b[39msum(h) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m, h \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, h \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.1\u001b[39m]  \u001b[38;5;66;03m# Portfolio constraints\u001b[39;00m\n\u001b[0;32m     18\u001b[0m problem \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39mProblem(cp\u001b[38;5;241m.\u001b[39mMaximize(utility), constraints)\n",
+      "File \u001b[1;32mc:\\Users\\sbhatia2\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\cvxpy\\atoms\\quad_form.py:246\u001b[0m, in \u001b[0;36mquad_form\u001b[1;34m(x, P, assume_PSD)\u001b[0m\n\u001b[0;32m    244\u001b[0m \u001b[38;5;66;03m# Check dimensions.\u001b[39;00m\n\u001b[0;32m    245\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m P\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m P\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m P\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mmax\u001b[39m(x\u001b[38;5;241m.\u001b[39mshape, (\u001b[38;5;241m1\u001b[39m,))[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m P\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]:\n\u001b[1;32m--> 246\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid dimensions for arguments.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    247\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x\u001b[38;5;241m.\u001b[39mis_constant():\n\u001b[0;32m    248\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x\u001b[38;5;241m.\u001b[39mH \u001b[38;5;241m@\u001b[39m P \u001b[38;5;241m@\u001b[39m x\n",
+      "\u001b[1;31mException\u001b[0m: Invalid dimensions for arguments."
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
