Create new frontier() method.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -949,25 +949,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 196,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Invalid dimensions for arguments.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[185], line 66\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;66;03m# Drop the first column (^DJI).\u001b[39;00m\n\u001b[0;32m     64\u001b[0m Qts_modified \u001b[38;5;241m=\u001b[39m Qts\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m1\u001b[39m:, \u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m---> 66\u001b[0m \u001b[43mplot_efficient_frontiers\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQts_modified\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQsi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTAU\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[185], line 39\u001b[0m, in \u001b[0;36mplot_efficient_frontiers\u001b[1;34m(mu, Qts, Qsi, tau_range)\u001b[0m\n\u001b[0;32m     35\u001b[0m returns_si, risks_si \u001b[38;5;241m=\u001b[39m [], []\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m tau \u001b[38;5;129;01min\u001b[39;00m tau_range:\n\u001b[0;32m     38\u001b[0m     \u001b[38;5;66;03m# Time-series model\u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m     weights_ts, utility_ts \u001b[38;5;241m=\u001b[39m \u001b[43mport\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtau\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     40\u001b[0m     risk_ts \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(weights_ts\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m@\u001b[39m Qts \u001b[38;5;241m@\u001b[39m weights_ts)\n\u001b[0;32m     41\u001b[0m     returns_ts\u001b[38;5;241m.\u001b[39mappend(utility_ts)\n",
-      "Cell \u001b[1;32mIn[185], line 16\u001b[0m, in \u001b[0;36mport\u001b[1;34m(mu, Q, tau)\u001b[0m\n\u001b[0;32m     14\u001b[0m n \u001b[38;5;241m=\u001b[39m mu\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]  \u001b[38;5;66;03m# Number of securities\u001b[39;00m\n\u001b[0;32m     15\u001b[0m h \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39mVariable(n)\n\u001b[1;32m---> 16\u001b[0m utility \u001b[38;5;241m=\u001b[39m \u001b[43mcp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquad_form\u001b[49m\u001b[43m(\u001b[49m\u001b[43mh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.5\u001b[39m \u001b[38;5;241m+\u001b[39m tau \u001b[38;5;241m*\u001b[39m cp\u001b[38;5;241m.\u001b[39mmatmul(mu\u001b[38;5;241m.\u001b[39mT, h)  \u001b[38;5;66;03m# Maximizing the utility function\u001b[39;00m\n\u001b[0;32m     17\u001b[0m constraints \u001b[38;5;241m=\u001b[39m [cp\u001b[38;5;241m.\u001b[39msum(h) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m, h \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, h \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.1\u001b[39m]  \u001b[38;5;66;03m# Portfolio constraints\u001b[39;00m\n\u001b[0;32m     18\u001b[0m problem \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39mProblem(cp\u001b[38;5;241m.\u001b[39mMaximize(utility), constraints)\n",
-      "File \u001b[1;32mc:\\Users\\sbhatia2\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\cvxpy\\atoms\\quad_form.py:246\u001b[0m, in \u001b[0;36mquad_form\u001b[1;34m(x, P, assume_PSD)\u001b[0m\n\u001b[0;32m    244\u001b[0m \u001b[38;5;66;03m# Check dimensions.\u001b[39;00m\n\u001b[0;32m    245\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m P\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m P\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m P\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mmax\u001b[39m(x\u001b[38;5;241m.\u001b[39mshape, (\u001b[38;5;241m1\u001b[39m,))[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m P\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]:\n\u001b[1;32m--> 246\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid dimensions for arguments.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    247\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x\u001b[38;5;241m.\u001b[39mis_constant():\n\u001b[0;32m    248\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x\u001b[38;5;241m.\u001b[39mH \u001b[38;5;241m@\u001b[39m P \u001b[38;5;241m@\u001b[39m x\n",
-      "\u001b[1;31mException\u001b[0m: Invalid dimensions for arguments."
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "def frontier():\n",
+    "    \"\"\"\n",
+    "    Plots the efficient frontier by optimizing portfolios over a range of risk tolerance values using the `port` function.\n",
+    "    Loads mean returns vector and covariance matrix, then calculates and plots the efficient frontier.\n",
+    "    \"\"\"\n",
+    "    # Load the mean returns vector and covariance matrix from saved files.\n",
+    "    mu, Q = load_inputs()\n",
+    "    TAU = np.arange(0, 0.501, 0.001)  # Range of risk tolerance values\n",
+    "    returns = []  # List to store expected returns of optimized portfolios\n",
+    "    std_devs = []  # List to store standard deviations of optimized portfolios\n",
+    "\n",
+    "    for tau in TAU:\n",
+    "        # Use the previously defined port() function for portfolio optimization.\n",
+    "        h_opt = port(mu, Qts, tau)\n",
+    "        # Compute expected return and standard deviation for the optimized portfolio.\n",
+    "        ret, std = compute_metrics(mu, Qts, h_opt)\n",
+    "        # Store the results.\n",
+    "        returns.append(ret)\n",
+    "        std_devs.append(std)\n",
+    "\n",
+    "    # Plot the efficient frontier.\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(std_devs, returns, 'o-', markersize=4)\n",
+    "    plt.title('Efficient Frontier')\n",
+    "    plt.xlabel('Standard Deviation of Portfolio Return')\n",
+    "    plt.ylabel('Expected Portfolio Return')\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
