Correct Q5 problem statement.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -741,7 +741,7 @@
     "1. uses a loop to regress each company’s returns onto the index return,\n",
     "2. prints a table of intercepts, slopes ($\\beta_i$), and idiosyncratic standard deviations $\\sigma_{R_i}$ (standard deviation of the residuals) for all companies $i = 1, \\dots, 30$,\n",
     "3. computes and prints the variance of the index’s return,\n",
-    "4. computes and prints the variance of the index’s return, $\\texttt{Qts}$ using your computed $\\sigma^2_M$, $\\beta_i$, and $\\sigma^2_{R_i}$, for all $i$, and\n",
+    "4. computes the single-index approximation to the covariance matrix, $\\texttt{Qsi}$ using your computed $\\sigma^2_M$, $\\beta_i$, and $\\sigma^2_{R_i}$, for all $i$, and\n",
     "5. prints the first five rows and columns of this covariance matrix.\n",
     "\n",
     "Clearly describe all steps in your program with comments. List your program in your answer document. No points will be awarded unless the steps associated with each part of the question are clearly distinguished. Also, submit the source code file."
