Fix naming of variables for Q5.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -848,9 +848,9 @@
     "    sigma_M_squared = np.var(index_returns)\n",
     "    print(f\"\\nVariance of the Index's Return: {sigma_M_squared}\")\n",
     "\n",
-    "    Qts = daily_returns.cov()\n",
+    "    Qsi = daily_returns.cov()\n",
     "    print(\"\\nCovariance Matrix Qts (First 5 Rows and Columns):\")\n",
-    "    print(Qts.iloc[:5, :5])\n",
+    "    print(Qsi.iloc[:5, :5])\n",
     "\n",
     "analyze_data(file_path)"
    ]
