Fix Q5 problem statement again.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given $n$ securities $S_i, (i = 1, \\dots, 30),$ the single index model for their securities’ returns is given by $$r_i = \\alpha_i + \\beta_i r_M + \\epsilon_i$$ where $r_M$ is the return of the Index (here the Dow Jones), $\\epsilon_i$ is a random variable specific to Security $S_i$ satisfies $$\\mathbb{E}[\\epsilon_i] = 0, \\; cov(\\epsilon_i, r_M) = 0, \\; \\text{if} \\; i \\neq j$$ where $\\sigma^2_M$ is the variance of the Index, and $\\sigma^2_{R_i}$ is the variance of the residual $\\epsilon_i$ for security $S_i$."
+    "Given $n$ securities $S_i, (i = 1, \\dots, 30),$ the single index model for their securities’ returns is given by $$r_i = \\alpha_i + \\beta_i r_M + \\epsilon_i$$ where $r_M$ is the return of the Index (here the Dow Jones), $\\epsilon_i$ is a random variable specific to Security $S_i$ satisfies $$\\mathbb{E}[\\epsilon_i] = 0, \\; cov(\\epsilon_i, r_M) = 0, \\; \\text{if} \\; i \\neq j.$$\n",
+    "\n",
+    "Under that model, we have the securities Expected Returns $\\mu_i = \\alpha_i + \\beta_i \\mu_M$ where $\\mu_M$ is the Expected\n",
+    "Return of the Index. The securities variance and covariances are specified by\n",
+    "\n",
+    "$$\\sigma_i^2 = \\beta_i^2 \\sigma_M^2 + \\sigma_{R_i}^2 \\; \\text{and} \\; \\sigma_{ij} = \\beta_i \\beta_j \\sigma_M^2 \\; \\text{when} \\; i \\neq j$$\n",
+    "\n",
+    "where $\\sigma^2_M$ is the variance of the Index, and $\\sigma^2_{R_i}$ is the variance of the residual $\\epsilon_i$ for security $S_i$."
    ]
   },
   {
@@ -749,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
