Fix Qsi matrix and finish Q5.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -756,56 +756,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercepts, Betas, and Idiosyncratic Standard Deviations:\n",
-      "      Intercept      Beta   Sigma_R\n",
-      "AAPL   0.000268  1.138782  0.012475\n",
-      "AXP   -0.000719  0.853526  0.011009\n",
-      "BA     0.000697  1.019695  0.009490\n",
-      "CAT   -0.001290  1.063530  0.012045\n",
-      "CSCO   0.000750  1.060068  0.009936\n",
-      "CVX   -0.001031  1.148306  0.012780\n",
-      "DD    -0.000181  1.020580  0.011313\n",
-      "DIS    0.000940  0.917125  0.010339\n",
-      "GE     0.000601  1.065219  0.009995\n",
-      "GS    -0.000071  1.165276  0.006910\n",
-      "HD     0.001003  1.015542  0.007833\n",
-      "IBM   -0.000517  1.050286  0.008685\n",
-      "INTC   0.000126  0.999549  0.012832\n",
-      "JNJ   -0.000219  0.854040  0.006560\n",
-      "JPM    0.000263  1.204165  0.007180\n",
-      "KO     0.000197  0.662824  0.006618\n",
-      "MCD    0.000802  0.930011  0.009012\n",
-      "MMM    0.000116  0.963949  0.006070\n",
-      "MRK   -0.000208  0.953009  0.010229\n",
-      "MSFT   0.000630  1.243621  0.013432\n",
-      "NKE    0.001375  0.982035  0.009613\n",
-      "PFE    0.000620  0.885675  0.008155\n",
-      "PG    -0.000416  0.766293  0.006506\n",
-      "TRV    0.000483  0.873620  0.006558\n",
-      "UNH    0.000886  1.031037  0.011808\n",
-      "UTX   -0.000240  0.977089  0.008357\n",
-      "V      0.001430  1.118423  0.010289\n",
-      "VZ    -0.000194  0.748745  0.007216\n",
-      "WMT   -0.001070  0.775067  0.010807\n",
-      "XOM   -0.000593  1.051269  0.009551\n",
       "\n",
-      "Variance of the Index's Return: 8.83749785920134e-05\n",
-      "\n",
-      "Covariance Matrix Qts (First 5 Rows and Columns):\n",
-      "0         ^DJI      AAPL       AXP        BA       CAT\n",
+      "Single-Index Approximation Covariance Matrix (First 5 Rows and Columns):\n",
+      "0         AAPL       AXP        BA       CAT      CSCO\n",
       "0                                                     \n",
-      "^DJI  0.000089  0.000101  0.000076  0.000090  0.000094\n",
-      "AAPL  0.000101  0.000271  0.000081  0.000128  0.000118\n",
-      "AXP   0.000076  0.000081  0.000186  0.000058  0.000079\n",
-      "BA    0.000090  0.000128  0.000058  0.000182  0.000093\n",
-      "CAT   0.000094  0.000118  0.000079  0.000093  0.000245\n"
+      "AAPL   0.00027  0.000086  0.000103  0.000107  0.000107\n",
+      "AXP   0.000086  0.000186  0.000077   0.00008   0.00008\n",
+      "BA    0.000103  0.000077  0.000182  0.000096  0.000096\n",
+      "CAT   0.000107   0.00008  0.000096  0.000245    0.0001\n",
+      "CSCO  0.000107   0.00008  0.000096    0.0001  0.000198\n"
      ]
     }
    ],
@@ -823,7 +789,7 @@
     "    Returns:\n",
     "    - Tuple[float, float, float]: Intercept (alpha), slope (beta), and standard deviation of residuals (sigma_r).\n",
     "    \"\"\"\n",
-    "    X = sm.add_constant(index_returns)  # Add a constant to include intercept in the model\n",
+    "    X = sm.add_constant(index_returns)  # Add a constant to include intercept in the model.\n",
     "    model = sm.OLS(security_returns, X).fit()\n",
     "    return model.params[0], model.params[1], model.resid.std()\n",
     "\n",
@@ -839,24 +805,40 @@
     "    - file_path (str): Path to the CSV file containing the Dow-Jones data.\n",
     "    \"\"\"\n",
     "    data = read_data(file_path)\n",
+    "    # print(data.head())\n",
+    "\n",
     "    daily_returns = calculate_simple_returns(data)\n",
+    "    # print(daily_returns.head())\n",
+    "\n",
     "    index_returns = daily_returns['^DJI']\n",
+    "    # print(index_returns)\n",
     "\n",
     "    results = pd.DataFrame(columns=['Intercept', 'Beta', 'Sigma_R'])\n",
     "\n",
-    "    # Loop through securities and regress each against the index\n",
+    "    # Loop through securities and regress each against the index.\n",
     "    for column in daily_returns.columns[1:]:  # Skip Dow Jones column\n",
     "        alpha, beta, sigma_r = perform_regression(index_returns, daily_returns[column])\n",
     "        results.loc[column] = [alpha, beta, sigma_r]\n",
     "\n",
-    "    print(\"Intercepts, Betas, and Idiosyncratic Standard Deviations:\")\n",
-    "    print(results)\n",
+    "    # print(\"Intercepts, Betas, and Idiosyncratic Standard Deviations:\")\n",
+    "    # print(results)\n",
     "\n",
     "    sigma_M_squared = np.var(index_returns)\n",
-    "    print(f\"\\nVariance of the Index's Return: {sigma_M_squared}\")\n",
+    "    # print(f\"\\nVariance of the Index's Return: {sigma_M_squared}\")\n",
     "\n",
-    "    Qsi = daily_returns.cov()\n",
-    "    print(\"\\nCovariance Matrix Qts (First 5 Rows and Columns):\")\n",
+    "    ## Compute single-index approximation to the covariance matrix:\n",
+    "\n",
+    "    # Create an empty DataFrame to store the covariance matrix Qsi.\n",
+    "    Qsi = pd.DataFrame(index=daily_returns.columns[1:], columns=daily_returns.columns[1:])\n",
+    "\n",
+    "    for i in range(len(Qsi)):\n",
+    "        for j in range(len(Qsi.columns)):\n",
+    "            if i == j:\n",
+    "                Qsi.iloc[i, j] = results['Beta'].iloc[i] ** 2 * sigma_M_squared + results['Sigma_R'].iloc[i] ** 2\n",
+    "            else:\n",
+    "                Qsi.iloc[i, j] = results['Beta'].iloc[i] * results['Beta'].iloc[j] * sigma_M_squared\n",
+    "\n",
+    "    print(\"\\nSingle-Index Approximation Covariance Matrix (First 5 Rows and Columns):\")\n",
     "    print(Qsi.iloc[:5, :5])\n",
     "\n",
     "analyze_data(file_path)"
