--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -756,13 +756,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Intercepts, Betas, and Idiosyncratic Standard Deviations:\n",
+      "      Intercept      Beta   Sigma_R\n",
+      "AAPL   0.000268  1.138782  0.012475\n",
+      "AXP   -0.000719  0.853526  0.011009\n",
+      "BA     0.000697  1.019695  0.009490\n",
+      "CAT   -0.001290  1.063530  0.012045\n",
+      "CSCO   0.000750  1.060068  0.009936\n",
+      "CVX   -0.001031  1.148306  0.012780\n",
+      "DD    -0.000181  1.020580  0.011313\n",
+      "DIS    0.000940  0.917125  0.010339\n",
+      "GE     0.000601  1.065219  0.009995\n",
+      "GS    -0.000071  1.165276  0.006910\n",
+      "HD     0.001003  1.015542  0.007833\n",
+      "IBM   -0.000517  1.050286  0.008685\n",
+      "INTC   0.000126  0.999549  0.012832\n",
+      "JNJ   -0.000219  0.854040  0.006560\n",
+      "JPM    0.000263  1.204165  0.007180\n",
+      "KO     0.000197  0.662824  0.006618\n",
+      "MCD    0.000802  0.930011  0.009012\n",
+      "MMM    0.000116  0.963949  0.006070\n",
+      "MRK   -0.000208  0.953009  0.010229\n",
+      "MSFT   0.000630  1.243621  0.013432\n",
+      "NKE    0.001375  0.982035  0.009613\n",
+      "PFE    0.000620  0.885675  0.008155\n",
+      "PG    -0.000416  0.766293  0.006506\n",
+      "TRV    0.000483  0.873620  0.006558\n",
+      "UNH    0.000886  1.031037  0.011808\n",
+      "UTX   -0.000240  0.977089  0.008357\n",
+      "V      0.001430  1.118423  0.010289\n",
+      "VZ    -0.000194  0.748745  0.007216\n",
+      "WMT   -0.001070  0.775067  0.010807\n",
+      "XOM   -0.000593  1.051269  0.009551\n",
+      "\n",
+      "Variance of the Index's Return: 8.83749785920134e-05\n",
       "\n",
       "Single-Index Approximation Covariance Matrix (First 5 Rows and Columns):\n",
       "0         AAPL       AXP        BA       CAT      CSCO\n",
@@ -820,11 +854,11 @@
     "        alpha, beta, sigma_r = perform_regression(index_returns, daily_returns[column])\n",
     "        results.loc[column] = [alpha, beta, sigma_r]\n",
     "\n",
-    "    # print(\"Intercepts, Betas, and Idiosyncratic Standard Deviations:\")\n",
-    "    # print(results)\n",
+    "    print(\"Intercepts, Betas, and Idiosyncratic Standard Deviations:\")\n",
+    "    print(results)\n",
     "\n",
     "    sigma_M_squared = np.var(index_returns)\n",
-    "    # print(f\"\\nVariance of the Index's Return: {sigma_M_squared}\")\n",
+    "    print(f\"\\nVariance of the Index's Return: {sigma_M_squared}\")\n",
     "\n",
     "    ## Compute single-index approximation to the covariance matrix:\n",
     "\n",
