--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -931,22 +931,22 @@
     "\n",
     "# Step 4. Compute the covariance matrix: Using formula sigma^2_M * Beta_i * Beta_j + delta_ij * sigma^2_Ri\n",
     "## Here, delta_ij is the Kronecker delta, which is 1 if i = j and 0 otherwise\n",
-    "Qts <- matrix(nrow=30, ncol=30)\n",
+    "Qsi <- matrix(nrow=30, ncol=30)\n",
     "\n",
     "for(i in 1:nrow(results_df)){\n",
     "  for(j in 1:nrow(results_df)){\n",
     "    if(i == j){\n",
     "      # Diagonal elements represent the variance for each security\n",
-    "      Qts[i,j] <- sigma_M_squared * (results_df$Beta[i]^2) + (results_df$Sigma_R[i]^2)\n",
+    "      Qsi[i,j] <- sigma_M_squared * (results_df$Beta[i]^2) + (results_df$Sigma_R[i]^2)\n",
     "    } else {\n",
     "      # Off-diagonal elements represent the covariances between securities\n",
-    "      Qts[i,j] <- sigma_M_squared * results_df$Beta[i] * results_df$Beta[j]\n",
+    "      Qsi[i,j] <- sigma_M_squared * results_df$Beta[i] * results_df$Beta[j]\n",
     "    }\n",
     "  }\n",
     "}\n",
     "\n",
     "# 5. Print the first five rows and columns of the covariance matrix.\n",
-    "print(Qts[1:5, 1:5])\n",
+    "print(Qsi[1:5, 1:5])\n",
     "```"
    ]
   },
