Create general frontier function and add type-hinting.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -994,22 +994,19 @@
     }
    ],
    "source": [
-    "def frontier_qts():\n",
+    "def frontier_g(mu: np.ndarray, Q: np.ndarray, tau_range: np.ndarray) -> None:\n",
     "    \"\"\"\n",
     "    Plots the efficient frontier by optimizing portfolios over a range of risk tolerance values using the `port` function.\n",
     "    Loads mean returns vector and covariance matrix, then calculates and plots the efficient frontier.\n",
     "    \"\"\"\n",
-    "    # Load the mean returns vector and covariance matrix from saved files.\n",
-    "    mu, Q = load_inputs()\n",
-    "    TAU = np.arange(0, 0.501, 0.001)  # Range of risk tolerance values\n",
     "    returns = []  # List to store expected returns of optimized portfolios\n",
     "    std_devs = []  # List to store standard deviations of optimized portfolios\n",
     "\n",
-    "    for tau in TAU:\n",
+    "    for tau in tau_range:\n",
     "        # Use the previously defined port() function for portfolio optimization.\n",
-    "        h_opt = port(mu, Qts, tau)\n",
+    "        h_opt = port(mu, Q, tau)\n",
     "        # Compute expected return and standard deviation for the optimized portfolio.\n",
-    "        ret, std = compute_metrics(mu, Qts, h_opt)\n",
+    "        ret, std = compute_metrics(mu, Q, h_opt)\n",
     "        # Store the results.\n",
     "        returns.append(ret)\n",
     "        std_devs.append(std)\n",
@@ -1023,7 +1020,11 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
-    "frontier_qts()"
+    "# Load the mean returns vector from the saved .pkl file.\n",
+    "mu = load_inputs()[0]\n",
+    "tau_range = np.arange(0, 0.501, 0.001)  # Range of risk tolerance values\n",
+    "\n",
+    "frontier_g(mu, Qts, tau_range)"
    ]
   }
  ],
