Export S1 of Q6 to HTML.

--- a/FE630 - Midterm/FE630 - Midterm.ipynb
+++ b/FE630 - Midterm/FE630 - Midterm.ipynb
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1024,6 +1024,7 @@
     "mu = load_inputs()[0]\n",
     "tau_range = np.arange(0, 0.501, 0.001)  # Range of risk tolerance values\n",
     "\n",
+    "# Step 1: Plot the efficient frontier for Qts or time series approximation for covariance matrix.\n",
     "frontier_g(mu, Qts, tau_range)"
    ]
   }
